# cairo-lfd

./: .gitignore  README.md  requirements.txt
cairo_lfd/: CMakeLists.txt  package.xml  setup.py
cairo_lfd/launch/: rosbridge_server.launch  web_trigger.launch
cairo_lfd/nodes/: ar4lfd_middleware.py  arpolfd_middleware.py  cuff_commands.py  custom_cost_service.py  keyboard_commands.py  modeling_keyboard_commands.py  recording_keyboard_commands.py  vrpn_middleware.py  web_service.py  web_trigger_service.py  world_to_base_transform.py  world_to_common_world_transform.py
cairo_lfd/scripts/: move_to_configuration.py  move_to_pose.py  quick_fk.py  quick_ik.py  random_configuration_gen.py  rosbridgelib_test.py
cairo_lfd/src/lfd/: alignment.py  analysis.py  constraints.py  conversion.py  data_conversion.py  data_io.py  data_processing.py  environment.py  items.py  processing.py  record.py  segmentation.py  triggers.py
cairo_lfd/src/modeling/: graphing.py  models.py  sampling.py  visualization.py
lfd/: CMakeLists.txt  setup.py
lfd/src/lfd/: analyzer.py  constraints.py  processing.py  record.py
lfd_analyzer/: CMakeLists.txt  package.xml  setup.py
lfd_analyzer/src/lfd_analysis/: alignment.py  demonstration.py  dtw.py  trajectory.py  trajectory1.json  trajectory2.json
lfd_data_processor/: CMakeLists.txt  package.xml  setup.py
lfd_data_processor/src/lfd_data/: io.py  processing.py
lfd_experiments/: CMakeLists.txt  optitrack_calibration_guide.txt  package.xml
lfd_experiments/experiment_data/ReMARS/: cubby_config.json  cubby_optimization_config.json  cubby_skill_repair_config.json  remars_config.json
lfd_experiments/experiment_data/acc_lfd_human_trials/: cubby_config.json  cubby_representation.json
lfd_experiments/experiment_data/ar4lfd/: cubby_config.json  placement_config.json  pouring_config.json
lfd_experiments/experiment_data/arc_lfd_demo/: README.txt  config.json  config_commented.json
lfd_experiments/experiment_data/feedback_cclfd/: pouring_config.json
lfd_experiments/experiment_scripts/: acclfd.py  acclfd_model.py  ar4lfd.py  ar4lfd_opt.py  arpolfd.py  cclfd.py  cclfd_model.py  default_config.json  feedback_cclfd.py  feedback_demonstration_server.py  jtas_cairosim_constrained_test.py  jtas_cairosim_test.py  jtas_test.py  jtas_w_id_test.py  label_demonstrations.py  lfd.py  lfd_model.py  live_constraint_test.py  mcac_constrained_test.py  model_demonstrations.py  model_demonstrations_server.py  perform_demonstration_server.py  pointwise_record_only.py  record_demonstrations.py  record_only.py  record_subject_demonstrations.py
lfd_experiments/experiment_scripts/deprecated/: acclfd_model.py  cclfd_model.py  lfd_model.py  model_demonstrations.py  perform_demonstration_server.py  record_demonstrations.py  record_subject_demonstrations.py
lfd_experiments/experimental_data/cup_pour_repair/: README.md
lfd_experiments/launch/: ar4lfd.launch  ar4lfd_sim.launch  arpo_lfd.launch  cairo_lfd.launch  cairo_lfd_sim.launch  cairo_lfd_web_triggers.launch  custom_cost.launch  feedback.launch
lfd_experiments/prototyping/constraint_editing/: ar_constraints.json  ar_constraints_test.json  constraint_edit_message_test.py  constraint_editing.py
lfd_experiments/prototyping/constraint_triggers_test/: config.json  constraint_triggers_test.py
lfd_experiments/prototyping/contact_segmentation/: object_to_object_test.py
lfd_experiments/prototyping/custom_cost_testing/: config.json
lfd_experiments/prototyping/demonstration_segmenter/: SHORTSOI.json  main.py
lfd_experiments/prototyping/height_constraint_heuristic/: V2.py  V3.py  all.json  vbgmm_precision.py
lfd_experiments/prototyping/item_config_test/: config.json  item_state_test.py
lfd_experiments/prototyping/manual_segmentation/: segmentation_test.py
lfd_experiments/prototyping/meta_constraint_assignment/: assignment_test.py  config.json  height_assignment.py  integration_test.py  multiple_metaconstraint_test.py  segmentation_testing.py
lfd_experiments/prototyping/object_object_testing/: config.json  object_to_object_test.py
lfd_experiments/prototyping/orientation_heuristic_test/: config.json  orientation_heuristic_test.py
lfd_experiments/prototyping/over_under_test/: config.json  trigger_test.py
lfd_experiments/prototyping/perimeter_testing/: config.json
lfd_experiments/prototyping/recording_test/: config.json
lfd_experiments/prototyping/relative_position/: config.json  relative_position.py
lfd_experiments/prototyping/serialization/: intermedite_trajectories.py
lfd_experiments/prototyping/single_script/: config.json
lfd_experiments/scripts/: alignment_example.py  ar_representation_publisher.py  config_import_example.py  cubby_representation.txt  expand_perimeter.py  fixed_transform_manager.py  gmm_keyframe_example.py  keyframe_labeling_example.py  kmeans_cluster_aligned_demonstrations.py  kmeans_clustering_example.py  movegroup_tutorial.py  state_validity_test.py
lfd_experiments/srv/: ModelDemonstrations.srv  PerformDemonstration.srv
lfd_graph/: CMakeLists.txt  package.xml  setup.py
lfd_keyframe/: CMakeLists.txt  package.xml  setup.py
lfd_keyframe_examples/: CMakeLists.txt  package.xml
lfd_keyframe_examples/scripts/: gmm_keyframe_example.py  kmeans_cluster_aligned_demonstrations.py  kmeans_clustering_example.py
lfd_modeling/: CMakeLists.txt  package.xml  setup.py
lfd_modeling/nodes/: check_waypoints_node.py
lfd_modeling/scripts/: analyzing_keyframe_samples.py  development_runs.py  development_runs_joint_space.py  gmmtesting.py  hundred_ranked_sample_graph.py  lfd_single_waypoint.py  plot_culling.py
lfd_network/: CMakeLists.txt  package.xml  setup.py
lfd_network/scripts/: lfd_single_waypoint.py
lfd_processor_examples/: CMakeLists.txt
lfd_processor_examples/experiment_scripts/: label_demonstrations.py  model_demonstrations.py  record_demonstrations.py
lfd_processor_examples/scripts/: alignment_example.py  gmm_keyframe_example.py  keyframe_grouping_example.py  keyframe_labeling_example.py  kmeans_cluster_aligned_demonstrations.py  kmeans_clustering_example.py
(+742 files in other folders)
