<?xml version="1.0"?>
<package format="2">
  <name>lfd</name>
  <version>0.0.0</version>
  <description>The LFD package managing experimentation environments.</description>

  <maintainer email="carl.mueller@colorado.edu">Carl Mueller</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>predicate_classification</depend>
  <depend>predicate_classification_msgs</depend> 




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
