<?xml version="1.0"?>
<package format="2">
  <name>cairo_lfd</name>
  <version>0.0.0</version>
  <description>The LFD package managing experimentation environments.</description>

  <maintainer email="carl.mueller@colorado.edu">Carl Mueller</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>predicate_classification</depend>
  <depend>predicate_classification_msgs</depend> 
  <depend>message_generation</depend>
  <depend>message_runtime</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
